--- a/ProjectEuler/ProjectEuler.fsproj
+++ b/ProjectEuler/ProjectEuler.fsproj
@@ -51,6 +51,10 @@
     <Compile Include="ProjectEuler10.fs" />
     <Compile Include="ProjectEuler00.fs" />
     <Compile Include="ProjectEuler20.fs" />
+    <Compile Include="ProjectEuler60.fs" />
+    <Compile Include="ProjectEuler100.fs" />
+    <Compile Include="ProjectEuler120.fs" />
+    <Compile Include="ProjectEuler70.fs" />
     <Compile Include="Program.fs" />
   </ItemGroup>
   <Import Project="$(MSBuildExtensionsPath32)\FSharp\1.0\Microsoft.FSharp.Targets" Condition="!Exists('$(MSBuildBinPath)\Microsoft.Build.Tasks.v4.0.dll')" />
